crates/quiver/tests/compile_fail/generics.rs
//! Generic structs are not supported.

#[derive(quiver::Quiver)]
struct Thing<T> {
    name: T,
}

fn main() {}
